overflow label on node fix (#112)

--- a/src/components/CircularNode.tsx/CircularNode.module.scss
+++ b/src/components/CircularNode.tsx/CircularNode.module.scss
@@ -41,6 +41,11 @@
   .headingContainer {
     display: flex;
     justify-content: space-between;
+
+    &__popover{
+      margin-left: 10px;
+      cursor: pointer;
+    }
   }
 
   .chip {
@@ -50,6 +55,8 @@
     border-radius: 4px;
     margin-bottom: 8px;
     display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     &__task {
       background: white;
@@ -70,5 +77,7 @@
   .labelContainer {
     font-size: 16px;
     font-weight: 700;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
